--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div>
             <ul>
                 <li><a href='./persian.html'>persian</a></li>
-                <li><a href='./maine.html'>persian</a></li>
+                <li><a href='./maine.html'>maine coon</a></li>
             </ul>
         </div>
         <a href="#header">Return to top</a>
